Refactor SecurityConfig for improved readability